--- a/main.css
+++ b/main.css
@@ -1,36 +1,60 @@
+body{
+    background-color: rgb(80, 185, 255);
+    
+
+}
+.background{
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    background-image: url(./fonas.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    filter: blur(4px);
+
+}
 .Container{
     display: inline-block;
     width: 800px;
-    background-color: blue;
     margin-left: calc((100% - 800px) / 2);
-
+    margin-top: 100px;
+    position: relative;
 }
-.left-column{
+.left-column {
     display: inline-block;
     width: 40%;
     float: left;
-    background-color: rgb(80, 185, 255);
-    color: #fff;
     padding: 40px;
+    background-color: rgb(80, 185, 255);
+    background-image: url(./fonas2.jpg);
+    background-repeat: no-repeat;
+    color: #fff;
+    background-size: cover;
+    background-position: center;
+    position: absolute;
+    top:30px;
+    bottom: 30px;
 }
-.main-title{
+.main-title {
     display: inline-block;
     width: 100%;
-    
 }
 
 .bottom-links{
     display: inline-block;
-    width: 100%;
+    position: absolute;
+    bottom: 20px;
+    left: 40px;
+    right: 40px;
 }
 .bottom-links > .link{
-    display: inline-block;
-  
+    display: inline-block; 
+    color: #fff;
 }
 
 .symbol{
     display: inline-block;
-    width: 100%;
 }
 .right-column{
     display: inline-block;
@@ -38,15 +62,24 @@
     padding: 40px;
     float: right;
     background-color: #fff;
+    position: relative;
+
 }
 .close{
     display: inline-block;
     width: 60px;
     height: 60px;
+    font-size: 30px;
+    text-align: center;
+    position: absolute;
+    right:0;
+    top:0;
+    line-height: 54px;
 }
 .form{
     display: inline-block;
     width: 100%;
+
 }
 .form-row{
     display: inline-block;
@@ -55,7 +88,7 @@
 
 }
 .form-row:last-of-type{
-    margin-top: 0;
+    margin-bottom: 0;
 }
 
 label{
