--- a/main.css
+++ b/main.css
@@ -1,37 +1,33 @@
 body{
-    background-color: rgb(80, 185, 255);
-    
-
+    background-image: linear-gradient(to left bottom, #44a8bf, #008ec0, #0070ba, #444da6, #671c80);
 }
 .background{
     display: inline-block;
     width: 100%;
-    height: 100%;
-    background-image: url(./fonas.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    filter: blur(4px);
+    height: 100vh;
+    background-image: linear-gradient(to left bottom, #44a8bf, #008ec0, #0070ba, #444da6, #671c80);
 
 }
 .Container{
     display: inline-block;
     width: 800px;
-    margin-left: calc((100% - 800px) / 2);
-    margin-top: 100px;
-    position: relative;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 .left-column {
     display: inline-block;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
     width: 40%;
     float: left;
     padding: 40px;
     background-color: rgb(80, 185, 255);
     background-image: url(./fonas2.jpg);
     background-repeat: no-repeat;
-    color: #fff;
     background-size: cover;
-    background-position: center;
+    background-position: center bottom;
+    color: #fff;
     position: absolute;
     top:30px;
     bottom: 30px;
@@ -59,7 +55,7 @@ body{
 .right-column{
     display: inline-block;
     width: 60%;
-    padding: 40px;
+    padding: 60px;
     float: right;
     background-color: #fff;
     position: relative;
@@ -138,7 +134,7 @@ input{
     padding: 10px;
     font-size: 18px;
     line-height: 20px;
-    text-decoration: none;
     color:  #005bd9;
+    text-decoration: none;
     
 }
